--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-hexdump==3.3
-capstone==3.0.4
-requests==2.18.4
-frida==12.0.5
-keystone_engine==0.9.1.post3
-PyQt5==5.11.3
-keystone==14.0.1
-pyperclip==1.7.0
-qdarkstyle==2.6.5
+hexdump>=3.3
+capstone>=3.0.4
+requests>=2.20.0
+frida>=12.0.5
+keystone_engine>=0.9.1.post3
+PyQt5>=5.11.3
+keystone>=14.0.1
+pyperclip>=1.7.0
+qdarkstyle>=2.6.5
