rebasing everything to dev branch

--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,13 @@ Dwarf.iml
 .git_cache
 tools
 .decompile
-
+.tmp
+.vscode
+*.patch
+desktop.ini
+dwarf_window_pos.ini
+linter.py
 #Virtualenv
 venv
 venv3
 env
-
